# bang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
VS/bang/: bang.sln  bang.vcxproj  bang.vcxproj.filters  packages.config
assets/cardBundles/base/: characterCards.json
include/BangLib/: Application.h  Card.h  CardBankComponent.h  CardFactory.h  CardNumber.h  CharacterCard.h  ConfigComponent.h  ContentStorageComponent.h  CreatePlayers.h  DealInitialHand.h  DrawPhase.h  DropPhase.h  Exception.h  GameState.h  GameStates.h  GameStates.inc  GenerateCharacters.h  ImageUtils.h  InputComponent.h  JsonFileUtils.h  MacroUtils.h  PlayCard.h  PlayPhase.h  Player.h  Renderer.h  RenderingComponent.h  SDL.h  SDLWrapper.h  State.h  StateEnumGenerator.h  StateGenerator.h  StateManager.h  Suit.h  SwitchPlayers.h  TextUtils.h  Window.h
include/GraphicsLib/: CardCollapsingContainer.h  CardCollapsingHoveredHighlightingContainer.h  DrawArea.h  Position.h  Positionable.h  QuadMap.h  Screen.h
include/SDLUtilsLib/: ImageUtils.h  Mouse.h  MouseButtonEvent.h  MouseMovementEvent.h  Renderer.h  SDLWrapper.h  TextUtils.h  Window.h
include/UtilsLib/: DrawArea.h  EventEmitter.h  EventHandler.h  Exception.h  IdFul.h  JsonUtils.h  MacroUtils.h  Position.h
src/: main.cc
src/BangLib/: Application.cc  Card.cc  CardBankComponent.cc  CardFactory.cc  CardNumber.cc  CharacterCard.cc  ContentStorageComponent.cc  CreatePlayers.cc  DealInitialHand.cc  DrawPhase.cc  DropPhase.cc  GameState.cc  GameStates.cc  GenerateCharacters.cc  ImageUtils.cc  InputComponent.cc  JsonFileUtils.cc  PlayCard.cc  PlayPhase.cc  Player.cc  Renderer.cc  RenderingComponent.cc  SDL.cc  SDLWrapper.cc  StateManager.cc  SwitchPlayers.cc  TextUtils.cc  Window.cc
src/GraphicsLib/: CardCollapsingContainer.cc  CardCollapsingHoveredHighlightingContainer.cc  DrawArea.cc  Positionable.cc  QuadMap.cc  Screen.cc
src/SDLUtilsLib/: ImageUtils.cc  Mouse.cc  Renderer.cc  SDLWrapper.cc  TextUtils.cc  Window.cc
src/UtilsLib/: DrawArea.cc  IdFul.cc  JsonUtils.cc
